# NeverDown

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  check_failed.py  check_logs.py  check_paths.py  check_recent_logs.py  check_status.py  check_status_clean.py  docker-compose.yml  failed_report.txt  logs_report.txt  pyproject.toml  status_out.txt  test_git.py  test_manual_clone.py  trigger_pipeline.py  trigger_retry.py
agents/: __init__.py  base_agent.py
agents/agent_0_sanitizer/: __init__.py  patterns.py  redactor.py  sanitizer.py
agents/agent_1_detective/: __init__.py  detective.py  diff_analyzer.py  log_parser.py
agents/agent_2_reasoner/: __init__.py  patch_generator.py  prompt_builder.py  reasoner.py
agents/agent_3_verifier/: __init__.py  sandbox_runner.py  verifier.py
agents/agent_4_publisher/: __init__.py  github_client.py  publisher.py
api/: __init__.py  main.py
api/middleware/: __init__.py  authentication.py  (+2 more)
config/: __init__.py  logging_config.py  security_rules.yaml  settings.py
core/: __init__.py  exceptions.py
database/: __init__.py  connection.py  models.py
frontend/: lint_output.txt  lint_output_2.txt  lint_output_4.txt  lint_output_5.txt  lint_output_6.txt  lint_output_7.txt  package-lock.json  package.json
models/: __init__.py  analysis.py  incident.py  patch.py  pull_request.py  verification.py
monitoring/: prometheus.yml
services/: __init__.py  git_service.py  orchestrator.py
tests/: __init__.py  test_api.py  test_detective.py  test_reasoner.py  test_sanitizer.py
web/: package-lock.json  package.json
(+44 files in other folders)
